# vulkan

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json
cmake/: glfw.cmake  glm.cmake  host_system_information.cmake  output.cmake  stb.cmake  third_party.cmake  tinyobjloader.cmake  vulkan.cmake  vulkan_modules.cmake
src/: foo.cppm  main.cpp  main2.cpp  math.cppm  test.cpp  test2.cpp
test/: CMakeLists.cmake
test/base/: base.cpp  test_hello.cpp
test/ray_tracing/next/: aabb.hpp  bvh_node.hpp  camera.hpp  color.hpp  constant.hpp  constant_medium.hpp  degrees_to_radians.hpp  hit_record.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  material.hpp  perlin.hpp  quad.hpp  random_double.hpp  ray.hpp  rtw_image.hpp  sphere.hpp  test_bvh.cpp  test_checkered_spheres.cpp  test_cornell_box.cpp  test_cornell_smoke.cpp  (+10 more)
test/script/: auto_add_exec.cmake  auto_add_ray_tracing.cmake  auto_add_test_by_dir.cmake  auto_add_vulkan_module.cmake  auto_compile_glslc_shaders.cmake  auto_compile_slang_shaders.cmake
test/vulkan/: 00_base_code.cpp  01_instance_creation.cpp  02_validation_layers.cpp  03_physical_device_selection.cpp  04_logical_device.cpp  05_window_surface.cpp  06_swap_chain_creation.cpp  07_image_views.cpp  08_graphics_pipeline.cpp  09_shader_modules.cpp  10_fixed_functions.cpp  11_dynamic_rendering.cpp  12_graphics_pipeline_complete.cpp  13_dynamic_rendering.cpp  14_command_buffers.cpp  15_rendering_and_presentation.cpp  16_frames_in_flight.cpp  17_swap_chain_recreation.cpp  18_vertex_input.cpp  19_vertex_buffer.cpp  20_staging_buffer.cpp  21_index_buffer.cpp  22_descriptor_layout.cpp  23_descriptor_sets.cpp  24_texture_image.cpp  25_sampler.cpp  26_texture_mapping.cpp  27_depth_buffering.cpp  28_model_loading.cpp  29_mipmapping.cpp  30_multisampling.cpp  31_compute_shader.cpp  32_ecosystem_utilities.cpp  33_vulkan_profiles.cpp  36_multiple_objects.cpp  37_multithreading.cpp  test_hello_vulkan.cpp
(+73 files in other folders)
